--- a/.github/workflows/setup-musl-on-linux/action.yml
+++ b/.github/workflows/setup-musl-on-linux/action.yml
@@ -29,7 +29,8 @@ runs:
           shell: sh
           run: |
               apk update
-              apk add bash git sed python3
+              apk add bash git sed python3 npm
+              npm install -g npm@latest
         
         - name: Skip all steps if not on ARM64
           shell: bash
@@ -42,10 +43,10 @@ runs:
           shell: bash
           run: |
             git config --global --add safe.directory "${{ inputs.workspace }}"
+            git fetch origin ${{ github.sha }}
+            git checkout ${{ github.sha }}
             git clean -xdf
             git reset --hard
-            git submodule sync
-            git submodule update --init --recursive
             
         - name: Set up access for musl on ARM
           shell: bash
