--- a/node/package.json
+++ b/node/package.json
@@ -68,10 +68,12 @@
             "tests/",
             "rust-client/**",
             "!build-ts/**",
-            "babel.config.js",
+            ".prettierignore",
             "jest.config.js",
             "hybrid-node-tests/**",
-            "docs/"
+            "docs/",
+            "DEVELOPER.md",
+            ".ort.yml"
         ]
     },
     "//": [
